stylus: ensure emoji picker on the right side aligns with file picker
In other words, ensured that the file upload button on the left and the
emoji picker on the right are the same distance from the edges
Despite using different distances, they end up being the same distance
away, which is quite interesting!

--- a/stylus/discord.css
+++ b/stylus/discord.css
@@ -50,7 +50,7 @@
 	> div
 	> div
 	> div {
-	padding: 0 16px;
+	padding: 0 11px 0 16px;
 }
 
 /* discover button, separator, and "download apps" button */
